--- a/Giorno2/base_di_partenza/articolo.html
+++ b/Giorno2/base_di_partenza/articolo.html
@@ -53,19 +53,19 @@
     <main>
         <article class="clearfix">
 
-            <h1 class="container2r">Come creare un template per i post </h1>
+            <h1>Come creare un <span>template per i post<img src="./assets/img/underline.svg"></span> </h1>
 
 
             <p><i class="fas fa-pen-square"></i> di Mario Rossi - <span><i class="fas fa-clock"></i> pubblicato il
                     25-10-2020</span></p>
 
-            <div id="container1">
+        
                 <img src="./assets/img/badge.png" id="float1" class="imgLeft" alt="logo Html5" width="70" height="70">
                 <p> La prima cosa
                     da
                     fare è suddividere in blocchi logici la pagina, identificando le <strong>parti comuni</strong> da
                     applicare a tutte le pagine</p>
-            </div>
+        
             <div id="clear1"></div>
             <p>Le varie aree saranno quindi suddivise in:</p>
             <ul>
